--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "this is react from scratch to master level ",
   "scripts": {
-    "test": "jest"
+    "start":"parcel index.html",
+    "build":"parcel build index.html",
+    "test": "jest" 
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,6 @@
   },
   "devDependencies": {
     "process": "^0.11.10"
-  }
+  },
+  "browserslist":["last 2 chrome versions","last 2 firefox versions"]
 }
